# Proyecto1-Operativos

./: CEthreads.c  CMakeLists.txt  GUI.py  README.md  Road.h  car.c  car.h  cethreads_wrapper.py  config.json  config_reader.py  configuracion.json  flow_equity.c  flow_equity.h  flow_fifo.c  gui.py  guigui.py  main  main.c  menu.py  planner.c  planner.h  road.c  road.h  scheduler  scheduler.c  scheduler.h  server  server.c  simulator.c  simulator.h
include/: CEthreads.h  flow_fifo.h
lib/: CEthreads.h
logs/: scheduler_logs.txt
src/: CMakeLists.txt  flow_equity.c  flow_fifo.c  main.c  planner.c
src/calendar/: scheduler.c
src/gui/: GUI.py
src/scheduler/: scheduler.h
src/street/: street.c  street.config  street.h
